--- a/dashboard.html
+++ b/dashboard.html
@@ -9,9 +9,11 @@
 * { box-sizing: border-box; margin:0; padding:0; }
 body {
   font-family: 'Inter', sans-serif;
-  background: #f5f7fb;
-  color: #222;
+  background: radial-gradient(circle at top, #0a1a3f, #000814);
+  background-image: url('https://i.imgur.com/9k8m2tP.png'); /* optional subtle star overlay */
+  color: #fff;
   min-height: 100vh;
+  background-repeat: repeat;
 }
 
 header {
@@ -22,15 +24,15 @@ header {
 }
 
 header h1 { font-size: 26px; font-weight: 700; }
-header p { margin-top: 5px; font-size: 14px; opacity: 0.9; }
+header p { margin-top: 5px; font-size: 14px; opacity: 0.95; }
 
 nav {
   display: flex;
   justify-content: center;
   gap: 15px;
   padding: 12px 0;
-  background: #fff;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  background: rgba(255,255,255,0.05);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
 }
 
 nav a {
@@ -42,7 +44,7 @@ nav a {
   transition: background 0.2s;
 }
 
-nav a:hover { background: #e8f1ff; }
+nav a:hover { background: rgba(255,255,255,0.1); }
 
 .container { max-width: 1000px; margin:auto; padding:20px; }
 
@@ -54,13 +56,13 @@ nav a:hover { background: #e8f1ff; }
 }
 
 .card {
-  background: #fff;
+  background: rgba(255,255,255,0.05);
   flex: 1;
   min-width: 180px;
   padding: 18px 15px;
   border-radius: 10px;
   text-align: center;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.06);
+  color: #fff;
 }
 
 .card h2 { color:#0a7cff; font-size:20px; margin-bottom:5px; }
@@ -73,26 +75,27 @@ nav a:hover { background: #e8f1ff; }
 }
 
 .task-card {
-  background: #fff;
+  background: #fff; /* white card only */
   padding:18px 15px;
   border-radius:10px;
   transition: transform 0.2s;
   cursor: pointer;
   border-left: 4px solid #0a7cff;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  color: #222;
 }
 
 .task-card:hover { transform: translateY(-3px); }
 
 .task-card h3 { margin-bottom:8px; color:#0a7cff; font-size:18px; }
-.task-card p { font-size:14px; opacity:0.8; margin-bottom:8px; }
+.task-card p { font-size:14px; opacity:0.85; margin-bottom:8px; }
 .task-card .reward { font-weight:700; color:#00aa00; }
 
 footer {
   margin-top:40px;
   text-align:center;
   font-size:14px;
-  color:#777;
+  color:#ccc;
 }
 
 footer a { color:#0a7cff; text-decoration:none; margin:0 6px; }
