--- a/dashboard.html
+++ b/dashboard.html
@@ -6,170 +6,220 @@
 <title>TaskEarn – Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
-* { box-sizing: border-box; margin:0; padding:0; }
-body {
-  font-family: 'Inter', sans-serif;
-  background: radial-gradient(circle at top, #0a1a3f, #000814);
-  background-image: url('https://i.imgur.com/9k8m2tP.png'); /* optional subtle star overlay */
-  color: #fff;
-  min-height: 100vh;
-  background-repeat: repeat;
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:'Inter',sans-serif;
+  color:#e5e7eb;
+  background:
+    radial-gradient(circle at 20% 30%, rgba(255,255,255,0.08), transparent 40%),
+    radial-gradient(circle at 80% 20%, rgba(255,255,255,0.06), transparent 35%),
+    linear-gradient(180deg,#020617,#020617);
 }
 
-header {
-  text-align: center;
-  padding: 28px 16px;
-  background: linear-gradient(135deg, #0a7cff, #0056c7);
-  color: #fff;
-}
-
-header h1 { font-size: 26px; font-weight: 700; }
-header p { margin-top: 5px; font-size: 14px; opacity: 0.95; }
-
-nav {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  padding: 12px 0;
-  background: rgba(255,255,255,0.05);
-  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-}
-
-nav a {
-  text-decoration:none;
-  color:#0a7cff;
-  font-weight:600;
-  padding:6px 14px;
-  border-radius:20px;
-  transition: background 0.2s;
-}
-
-nav a:hover { background: rgba(255,255,255,0.1); }
-
-.container { max-width: 1000px; margin:auto; padding:20px; }
-
-.balance-cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 25px;
-}
-
-.card {
-  background: rgba(255,255,255,0.05);
-  flex: 1;
-  min-width: 180px;
-  padding: 18px 15px;
-  border-radius: 10px;
-  text-align: center;
-  color: #fff;
-}
-
-.card h2 { color:#0a7cff; font-size:20px; margin-bottom:5px; }
-.card p { font-size:14px; opacity:0.8; }
-
-.tasks-feed {
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(260px,1fr));
-  gap:20px;
-}
-
-.task-card {
-  background: #fff; /* white card only */
-  padding:18px 15px;
-  border-radius:10px;
-  transition: transform 0.2s;
-  cursor: pointer;
-  border-left: 4px solid #0a7cff;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  color: #222;
-}
-
-.task-card:hover { transform: translateY(-3px); }
-
-.task-card h3 { margin-bottom:8px; color:#0a7cff; font-size:18px; }
-.task-card p { font-size:14px; opacity:0.85; margin-bottom:8px; }
-.task-card .reward { font-weight:700; color:#00aa00; }
-
-footer {
-  margin-top:40px;
+/* Header */
+header{
+  padding:32px 16px;
   text-align:center;
-  font-size:14px;
-  color:#ccc;
+  border-bottom:1px solid rgba(255,255,255,0.08);
+}
+header h1{margin:0;font-size:28px;font-weight:700}
+header p{margin-top:8px;opacity:.9}
+
+/* Nav */
+nav{
+  display:flex;
+  justify-content:center;
+  gap:14px;
+  padding:14px;
+  background:rgba(2,6,23,0.85);
+  backdrop-filter:blur(6px);
+}
+nav a{
+  text-decoration:none;
+  color:#c7d2fe;
+  font-weight:600;
+  padding:7px 16px;
+  border-radius:20px;
+}
+nav a:hover{background:rgba(99,102,241,0.18);color:#fff}
+
+/* Container */
+.container{
+  max-width:900px;
+  margin:auto;
+  padding:28px 16px;
 }
 
-footer a { color:#0a7cff; text-decoration:none; margin:0 6px; }
+/* Back */
+.back-btn{
+  display:inline-block;
+  margin-bottom:20px;
+  color:#93c5fd;
+  text-decoration:none;
+  font-weight:600;
+}
 
-@media(max-width:600px){
-  header h1{ font-size:22px; }
+/* Wallet Summary */
+.wallet{
+  display:flex;
+  justify-content:space-between;
+  gap:12px;
+  margin-bottom:28px;
+}
+.wallet-card{
+  flex:1;
+  background:rgba(255,255,255,0.96);
+  color:#111827;
+  padding:18px;
+  border-radius:14px;
+  box-shadow:0 12px 26px rgba(0,0,0,0.18);
+  text-align:center;
+}
+.wallet-card h3{margin:0;font-size:16px;color:#6366f1;font-weight:600}
+.wallet-card p{margin:6px 0 0;font-size:18px;font-weight:700;color:#16a34a}
+
+/* Task Grid */
+.tasks{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:18px;
+}
+
+/* Task Card */
+.task{
+  background:rgba(255,255,255,0.96);
+  color:#111827;
+  padding:18px;
+  border-radius:14px;
+  box-shadow:0 12px 26px rgba(0,0,0,0.18);
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+}
+.task h3{
+  margin:0;
+  font-size:18px;
+  font-weight:700;
+}
+.task p{
+  margin:0;
+  font-size:14px;
+  color:#374151;
+}
+.reward{
+  font-weight:700;
+  color:#16a34a;
+  font-size:15px;
+}
+.status{
+  font-size:13px;
+  font-weight:600;
+  color:#6366f1;
+}
+
+/* Button */
+.task button{
+  margin-top:auto;
+  padding:12px;
+  border:none;
+  border-radius:10px;
+  background:linear-gradient(135deg,#6366f1,#38bdf8);
+  color:#fff;
+  font-weight:600;
+  cursor:pointer;
+}
+.task button:hover{opacity:.9}
+
+/* Footer note */
+.note{
+  margin-top:28px;
+  font-size:14px;
+  opacity:.85;
+  text-align:center;
 }
 </style>
 </head>
 <body>
 
 <header>
-  <h1>TaskEarn Dashboard</h1>
-  <p>See available tasks and earn instantly</p>
+  <h1>Dashboard</h1>
+  <p>Welcome back! Complete tasks and track your earnings</p>
 </header>
 
 <nav>
+  <a href="index.html">Home</a>
+  <a href="dashboard.html">Dashboard</a>
   <a href="wallet.html">Wallet</a>
-  <a href="referral.html">Referrals</a>
-  <a href="withdraw.html">Withdraw</a>
-  <a href="index.html">Logout</a>
+  <a href="profile.html">Profile</a>
 </nav>
 
 <div class="container">
+  <a href="index.html" class="back-btn">← Back to Home</a>
 
-  <!-- Balance Cards -->
-  <div class="balance-cards">
-    <div class="card">
-      <h2>₦1,250</h2>
-      <p>Current Balance</p>
+  <!-- Wallet Summary -->
+  <div class="wallet">
+    <div class="wallet-card">
+      <h3>Total Earned</h3>
+      <p>₦5,200</p>
     </div>
-    <div class="card">
-      <h2>₦400</h2>
-      <p>Pending Approval</p>
+    <div class="wallet-card">
+      <h3>Pending</h3>
+      <p>₦1,500</p>
     </div>
-    <div class="card">
-      <h2>3</h2>
-      <p>Completed Tasks</p>
+    <div class="wallet-card">
+      <h3>Withdrawable</h3>
+      <p>₦3,700</p>
     </div>
   </div>
 
-  <!-- Tasks Feed -->
-  <h2>Available Tasks</h2>
-  <div class="tasks-feed">
-    <a href="task.html?task=insta-follow" class="task-card">
-      <h3>Instagram Follow</h3>
-      <p>Follow our Instagram page to earn reward.</p>
-      <p class="reward">Reward: ₦200</p>
-    </a>
+  <!-- Available Tasks -->
+  <div class="tasks">
 
-    <a href="task.html?task=youtube-watch" class="task-card">
-      <h3>Watch YouTube Video</h3>
-      <p>Watch a short video and earn instantly.</p>
-      <p class="reward">Reward: ₦150</p>
-    </a>
+    <div class="task">
+      <h3>Install & Open App</h3>
+      <p>Download the app from Play Store and open it once.</p>
+      <div class="reward">Reward: ₦250</div>
+      <div class="status">Status: Available</div>
+      <button onclick="startTask()">Start Task</button>
+    </div>
 
-    <a href="task.html?task=app-install" class="task-card">
-      <h3>Install App</h3>
-      <p>Install the app and submit proof to get reward.</p>
-      <p class="reward">Reward: ₦300</p>
-    </a>
+    <div class="task">
+      <h3>Register on Website</h3>
+      <p>Create an account using your email address.</p>
+      <div class="reward">Reward: ₦300</div>
+      <div class="status">Status: Available</div>
+      <button onclick="startTask()">Start Task</button>
+    </div>
 
-    <a href="task.html?task=survey" class="task-card">
-      <h3>Complete Survey</h3>
-      <p>Fill a quick survey and earn cash.</p>
-      <p class="reward">Reward: ₦250</p>
-    </a>
+    <div class="task">
+      <h3>Follow Instagram Page</h3>
+      <p>Follow and like 3 recent posts.</p>
+      <div class="reward">Reward: ₦150</div>
+      <div class="status">Status: Available</div>
+      <button onclick="startTask()">Start Task</button>
+    </div>
+
+    <div class="task">
+      <h3>Answer Survey</h3>
+      <p>Complete a short 2-minute survey.</p>
+      <div class="reward">Reward: ₦200</div>
+      <div class="status">Status: Limited</div>
+      <button onclick="startTask()">Start Task</button>
+    </div>
+
   </div>
 
+  <div class="note">
+    ⚠️ Complete tasks correctly to avoid disqualification.
+  </div>
 </div>
 
-<footer>
-  © 2026 TaskEarn • <a href="terms.html">Terms</a> • <a href="privacy.html">Privacy</a>
-</footer>
+<script>
+function startTask(){
+  alert("Task started! (Demo)\nYou’ll submit proof on the next page.");
+}
+</script>
 
 </body>
 </html>
